# ispc_template

./: CMakeLists.txt  FindISPC.cmake
include/: clock.h  common.h
ispc/: saxpy.ispc
src/: main.cpp
